--- a/resources/assets/sass/_local.scss
+++ b/resources/assets/sass/_local.scss
@@ -242,6 +242,9 @@ html.js input.form-autocomplete {
 
 
 
+
+
+
 .node-memorybook .vars .field {
       font-size:14pt;     
         margin: 15px 0 30px 0;
@@ -352,5 +355,30 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c2c2c2', end
     &:hover {
       background: none;
       color: #000;
+    }
+}
+
+
+
+
+
+
+
+
+.autocomplete {
+    position: absolute;
+    z-index: 9;
+    background: #fff;
+    border: 1px #eee solid;
+    top: 40px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    margin: 0px;
+    padding: 0px;
+
+    ul {
+      list-style-type: none;
+      margin: 0px;
+      padding: 12px 24px;
+      min-width: 200px;
     }
 }
